sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:7: error: not found: value getNombreValeur
	for(i <- 0 to getNombreValeur
                      ^