sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() 
{
	var v = 0
	var mem = 0
	
	for(i <- 0 to getNombreValeurs()-1)
	{
		for(j <- i to getNombreValeurs()-1)
		{
			if(getValeur(j)<v)
				mem = j
		}

		echange(mem,i)
	}
}
